Added plug wallet login button, automated retrieval of the ICP>Cycles conversion rate, and a few frontend modifications to consolidate space

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "quick-ic-react",
-  "version": "0.0.0",
+  "name": "ic-burn-calc",
+  "version": "1.2",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
